trabajo semi-terminado

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <p>
-        <a href="informacion/info.html">Ir a la información sobre la provincia</a>
-    </p>
+        <a id="info" href="informacion/info.html">Ir a la información sobre la provincia</a>
+    </p><hr>
     <h1>Provincia de Santa Cruz</h1><hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga voluptas cumque mollitia consectetur voluptate quo, saepe pariatur ipsam? Tempora, obcaecati harum? Excepturi porro maxime vitae vel explicabo voluptas aliquid officiis?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae possimus nostrum cumque recusandae aliquam modi, veritatis minus qui blanditiis dolorem asperiores. Blanditiis veniam possimus eligendi fugit aut dolorem ipsam molestiae?</p>
 </body>
 </html>
