--- a/informacion/info.html
+++ b/informacion/info.html
@@ -24,12 +24,12 @@
         </p><hr>
     </header>
     <main>
-        <h2 id="desc">Descripción</h2><hr>
+        <h2 id="desc">&#x1F4AC;Descripción &#x1F4AC;</h2><hr>
         <p>Santa Cruz, oficialmente Provincia de Santa Cruz​, es una de las 23 provincias que hay en la República Argentina.
             A su vez, es uno de los 24 estados autogobernados o jurisdicciones de primer orden5​ que conforman el país y uno de los 24 distritos electorales legislativos nacionales.​ 
             Su capital y ciudad más poblada es Río Gallegos.
         </p>
-        <h2 id="hist">Historia</h2><hr>
+        <h2 id="hist">&#x1F4D6;Historia&#x1F4D6;</h2><hr>
         <p>
             Se tiene la plena certeza de que el territorio de la actual provincia de Santa Cruz estaba habitado por el ser humano hace ya unos 11 000 años, tal como lo demuestran los yacimientos de Los Toldos y Piedra Museo, que también sirvieron de refugio a individuos pertenecientes a la etnia tehuelche (tson'k o chon), cazadores principalmente de guanacos, huemules y choiques. <br>
             Desde la perspectiva europea, las costas de la Patagonia fueron avistadas por primera vez por el portugués al servicio de España Hernando de Magallanes, el 21 de febrero de 1520, oportunidad en que bautizó el golfo San Matías (Río Negro y Chubut) donde observó la existencia de lobos marinos sudamericanos. Desembarcó, a fines de marzo, en la bahía San Julián en donde dispuso invernar, permaneciendo en el lugar hasta el 24 de agosto siguiente. Allí, impresionado por la corpulencia de los habitantes autóctonos los llamó patagones. El 26 de ese mes alcanzó la boca del río que llamó de Santa Cruz, del cual partió, recién, cincuenta y tres días más tarde. Ese fue el origen del nombre de la provincia. <br>
@@ -38,13 +38,13 @@
             El 1 de diciembre de 1878, en momentos en que parecía inminente un conflicto con Chile, el comodoro Luis Py enarboló la bandera argentina en la cumbre del cerro sobre el Cañadón Misioneros, tomando posesión definitivamente de la región. Formaban la División Naval de la llamada Expedición Py el monitor Los Andes, la cañonera Uruguay y la bombardera Constitución. Ese día se fundó Puerto Santa Cruz que, más tarde, fue sede de las autoridades y capital de la Gobernación de Santa Cruz. <br>
             En 1881 se firmó el tratado de límites entre la Argentina y Chile que asegura definitivamente la posesión argentina de los territorios de la Patagonia Oriental. <br>
         </p>
-        <h2 id="cap">Capital</h2><hr>
+        <h2 id="cap">&#x1F4CD;Capital&#x1F4CD;</h2><hr>
         <p>
             Río Gallegos es una ciudad de Argentina, capital de la provincia de Santa Cruz. Ubicada en la desembocadura del río Gallegos, en el departamento Güer Aike, es la ciudad más poblada de la provincia y el centro distribuidor para las actividades turísticas de la zona. <br>
             Río Gallegos, nace al instalarse la Sub Prefectura Marítima, el 19 de diciembre de 1885. Su destino era al parecer muy modesto, en el aspecto material, pero de denso contenido por su finalidad: "Ejercer dominio permanente, directo y categórico sobre el extremo continental del país, en el marco de la defensa de la Soberanía". <br>
             En el año 1888 el entonces Gobernador Ramón Lista decide trasladar la Capital del Territorio de Santa Cruz (que funcionaba en la actual localidad de Puerto Santa Cruz) a Río Gallegos. Este acto tuvo ratificación oficial el 19 de mayo de 1904, fecha en que el Poder Ejecutivo promulgó el Decreto correspondiente. <br>
         </p>
-        <h2 id="gob">Últimos gobiernos de la provincia</h2><hr>
+        <h2 id="gob">&#x2696;Últimos gobiernos de la provincia&#x2696;</h2><hr>
         <p>
             <table id="tabla">
                 <thead>
@@ -91,7 +91,7 @@
                 </tbody>
             </table>
         </p> <hr>
-        <h2 id="lim_clim">Límites y Clima</h2>
+        <h2 id="lim_clim">&#x26C5;Límites y Clima&#x26C5;</h2>
         <p>
             <h3>Límites</h3>
             <p>
@@ -114,7 +114,7 @@
                 <li>Polar Glaciar</li>
             </ul>
         </p> <hr>
-        <h2 id="eco_pobl">Economía y Población</h2>
+        <h2 id="eco_pobl">&#x1F4B8;Economía y Población&#x1F4B8;</h2>
         <p>
         <h3>Economía</h3>
                 <p>
